@@ -1,5 +1,11 @@
 2015-10-26  Doug Evans  <dje@google.com>
 
+	* common/gdb_wait.h (W_STOPCODE): Define, moved here from
+	gdbserver/linux-low.c.
+	(WSETSTOP): Simplify.
+
+2015-10-26  Doug Evans  <dje@google.com>
+
 	* linux-thread-db.c (find_new_threads_callback): Ditto.
 	(thread_db_pid_to_str): Ditto.
 
